--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
 
   </div>
 </section>
+<!-- About Section -->
+<section id="about">
+  <div class="container-1">
+    <h2 class="about-heading">About Me</h2>
+    <p class="about-text">
+      I’m Briana Vinson, a design student at Eastern Washington University with a passion for creativity and innovation. I’m currently pursuing a degree in design, and I love blending artistic expression with functional solutions. In my free time, I enjoy immersing myself in video games, drawing inspiration from their immersive worlds and intricate designs. Always eager to explore new creative avenues, I’m committed to honing my skills and bringing fresh, imaginative ideas to life.
+    </p>
+  </div>
+</section>
 
 
 <section id="contact" class="contact-section">
