--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
   <div id="profile-link" class="container">
     <div class="box box-1">
-      <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13530334509&extra_1=s%7Cc%7C547348909633%7Ce%7Cinstagram%20%27%7C&placement=&creative=547348909633&keyword=instagram%20%27&partner_id=googlesem&extra_2=campaignid%3D13530334509%26adgroupid%3D126262421974%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-1321618851291%26loc_physical_ms%3D9033697%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gad_source=1&gclid=EAIaIQobChMI18jJh52SigMViiGtBh1PBDvlEAAYASAAEgKri_D_BwE" target="_blank">
-        <p>Instagram</p>
+      <a href="https://www.figma.com/proto/j1jcqlS2n0iPx9tPYG7bxP/Briana-Vinson--UX-Portfolio?node-id=3562-288&t=e7YqAMpDIKhTdDbd-0&scaling=contain&content-scaling=fixed&page-id=1%3A2" target="_blank">
+        <p>UX/UI Portfolio</p>
       </a>
     </div>
   </div>
