added more projects

--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
       </a>
     </div>
 
+    <div class="bento-item">
+      <a href="https://app.milanote.com/1Tecyk1ZEKRI25/story-board?p=JBw3wzQ2Btm" target="_blank">
+        <img src="https://i.imgur.com/jdwBrlO.jpeg" alt="Project 7">
+        <p>Beyond Good and Evil Stop Motion</p>
+      </a>
+    </div>
+
     
 
   </div>
