--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="bento-item">
       <a href="https://app.milanote.com/1UpqN01aeZPi98/project-4-ai" target="_blank">
         <img src="https://i.imgur.com/wr1tLKn.png" alt="Project 6">
-        <p>Bubblegum Chrome</p>
+        <p>Bubblegum Chrome: An AI Created Website</p>
       </a>
     </div>
 
